--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # Cấu hình Hibernate (nếu bạn sử dụng JPA)
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 # application.properties
-spring.mvc.view.prefix=src/main/java/webapp/WEB-INF/views/
+spring.mvc.view.prefix=src/main/webapp/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
